# bulk-idl

./: Cargo.toml
src/: main.rs
