[package]
name = "bulk-idl"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0.79", features = ["full"] }
quote = "1.0.37"
walkdir = "2.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
clap = { version = "4.5.19", features = ["derive"] }
tempfile = "3.13.0"
toml = "0.8.19"

[build-dependencies]
cargo_metadata = "0.18.1"